Update Project 19 Feb 19 | Tambah Fungsi Alert Dialog & Toast | Rev 1.4 by Asep Septiadi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".alertdialog.AlertActivity"></activity>
         <activity android:name=".toast.ActivityToast" />
         <activity android:name=".MainActivity">
             <intent-filter>
