Update Project 19 Feb 19 | Tambah Fungsi Snackbar & Action | Rev 1.5 by Asep Septiadi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".alertdialog.AlertActivity"></activity>
+        <activity android:name=".snackbar.SnackbarActivity"></activity>
+        <activity android:name=".alertdialog.AlertActivity" />
         <activity android:name=".toast.ActivityToast" />
         <activity android:name=".MainActivity">
             <intent-filter>
