--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".intentexplicit.OtherActivity"></activity>
+        <activity android:name=".floatingactionbutton.FloatingButtonActivity"></activity>
+        <activity android:name=".intentexplicit.OtherActivity" />
         <activity android:name=".intentexplicit.ExplicitIntentActivity" />
         <activity android:name=".snackbar.SnackbarActivity" />
         <activity android:name=".alertdialog.AlertActivity" />
